--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -44,7 +44,7 @@
 .profile-header-black {
   background-color: #000000;
   border-bottom: 1px solid rgba(239, 68, 68, 0.15);
-  padding: 52px 48px 72px 48px;
+  padding: 3.25rem 3rem 4.5rem 3rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -83,7 +83,7 @@
 
 
 .profile-header-inner {
-  max-width: 1400px;
+  max-width: 87.5rem;
   width: 100%;
   margin: 0 auto;
   display: flex;
